--- a/public/css/main.css
+++ b/public/css/main.css
@@ -17,8 +17,8 @@ section { width:1480px; margin:0 auto; overflow:hidden; }
 [class^="fancybox-"] , [class^="fancybox-"] * , .slick-track , .fa , .fas , .fa:before , .fas:before , .fa:after , .fas:after , .trans_none_box { -webkit-transition: none; -moz-transition: none; -ms-transition: none; -o-transition: none; transition: none; }
 
 /* header */
-header {position: fixed;top: 0;left: 0;width: 100%;z-index: 999;background: rgba(25,25,25,0);overflow:hidden;padding: 22px 0;transition: all ease-in-out 0.3s;background: linear-gradient(to bottom,rgba(0, 0, 0, 0.68) 0%,rgba(0,0,0,0) 100%);display: flex;flex-direction: row;align-items: center;}
-header.headerTop { background: rgba(25,25,25,0.5); padding: 22px 0; }
+header {position: fixed;top: 0;left: 0;width: 100%;z-index: 999;background: rgba(25,25,25,0);overflow:hidden;transition: all ease-in-out 0.3s;background: linear-gradient(to bottom,rgba(0, 0, 0, 0.68) 0%,rgba(0,0,0,0) 100%);display: flex;flex-direction: row;align-items: center;}
+header.headerTop { background: rgba(25,25,25,0.5)}
 header #cis {margin:0 0 0 35px;width: 320px;}
 header #cis h1 a{ display: block; }
 header #cis h1 svg{ width: 100%; max-height: 50px; fill: #fff; }
@@ -158,7 +158,7 @@ footer .fb ul li img { width: 50px; }
 }
 @media screen and (max-width: 980px) {
 	section{ width:90%; }
-	header{overflow:visible;padding: 20px 0;}
+	header{overflow:visible;}
 	header #top-nav .nav-func{display:block;position: fixed;right: 30px;font-size: 26px;top: 17px;}
 	header.headerTop #top-nav .nav-func{ top: 18px; }
 	header #top-nav .menu{position: fixed;top: 94px;right: 5%;background: rgb(0 0 0 / 87%);float: none;margin: 0;width: 90%;}
